--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       
       <h1>Start a discussion not a 🔥 fire</h1>
       <img
-        src="https://media2.giphy.com/media/c6XTJeqP0mMpjEmd94/giphy.gif?cid=ecf05e47p8523lsjw6pwz9mvb2055mrozfhcjrrl6bld3qqr&rid=giphy.gif&ct=g"
-        alt="eld"
+        src="https://media.giphy.com/media/BGPqNyRDcmZGupjmdS/giphy.gif"
       />
     </div>
   </body>
